# cmakeProject

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuildInfo.cmake
src/: CMakeLists.txt
src/math/: CMakeLists.txt
test/: CMakeLists.txt
